--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,10 @@
-MONGO_URI=mongodb://localhost:27017/smartquiz
+# --- Local MongoDB URIs (works with Compass) ---
+CHAT_DB_URI=mongodb://localhost:27017/chat-app
+AUTH_DB_URI=mongodb://localhost:27017/auth-app
 
-VITE_API_BASE_URL=http://localhost:5000
+# --- Server Settings ---
+PORT=5000
+FRONTEND_URL=http://localhost:5173
+
+# --- JWT Secret (for authentication) ---
+JWT_SECRET=mySuperSecretKey123
